Release 1.1.0 (#105)
* Run OpenAPI generator

* Update schemas (part 1/2)

* Update codebase (part 2/2)

* Add scripts to package.json

* Update schemas and tool versions

* Patch README
