# server/openapi_server/controllers/tool_controller.py
@@ -13,7 +13,7 @@ def get_tool():  # noqa: E501
     """
     tool = Tool(
         name="date-annotator-example",
-        version="1.0.2",
+        version="1.1.0",
         license=License.APACHE_2_0,
         repository="github:nlpsandbox/date-annotator-example",
         description="Example implementation of the NLP Sandbox Date Annotator",
@@ -21,7 +21,7 @@ def get_tool():  # noqa: E501
         author_email="thomas.schaffter@sagebionetworks.org",
         url="https://github.com/nlpsandbox/date-annotator-example",
         type="nlpsandbox:date-annotator",
-        api_version="1.0.2"
+        api_version="1.1.0"
     )
     return tool, 200
 
@@ -34,4 +34,4 @@ def get_tool_dependencies():  # noqa: E501
 
     :rtype: ToolDependencies
     """
-    return ToolDependencies(tool_dependencies=[]), 200
+    return ToolDependencies(tools=[]), 200
